# tts

./: .gitignore  README.md  pyproject.toml  speech.toml  speechwevybe.toml  tts.py
